--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "paper-icon-button": "PolymerElements/paper-icon-button#~1.1.0",
     "polymer": "Polymer/polymer#^1.6.0",
     "paper-slider": "PolymerElements/paper-slider#^1.0.12",
-    "paper-toggle-button": "PolymerElements/paper-toggle-button#^1.2.1"
+    "paper-toggle-button": "PolymerElements/paper-toggle-button#^1.2.1",
+    "paper-tabs": "PolymerElements/paper-tabs#^1.7.0"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
