--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "paper-slider": "PolymerElements/paper-slider#^1.0.12",
     "paper-toggle-button": "PolymerElements/paper-toggle-button#^1.2.1",
     "paper-tabs": "PolymerElements/paper-tabs#^1.7.0",
-    "paper-toolbar": "PolymerElements/paper-toolbar#^1.1.7"
+    "paper-toolbar": "PolymerElements/paper-toolbar#^1.1.7",
+    "neon-animation": "PolymerElements/neon-animation#^1.2.4"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
